--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
     </div>
 
     <script src="script.js"></script>
+
+    <script>
+        function toggleDarkMode() {
+            document.body.classList.toggle("dark-mode");
+        }
+    </script>
 </body>
 </html>
